package com.nkm.discount.demo.model;

public enum UserType {
    EMPLOYEE,
    AFFILIATE,
    CUSTOMER;

}
