package com.nkm.discount.demo.retailstoreinterface;

import com.nkm.discount.demo.model.User;


public interface UserTypeDiscount {
    double getDiscount(User user);

}
